Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-208

isTraceEnabled implemenation missing in logger.cpp (Revision: 592627)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Build
    • None
    • Windows 2003 R2 / Visual Studio 2005

    Description

      isTraceEnabled method implementation is missing in logger.cpp which results in a linker error when directly using the method. Also calling LOG4CXX_TRACE during runtime will result in an error.

      Implementation which needs to be added:

      bool Logger::isTraceEnabled() const
      {
      if(repository == 0 || repository->isDisabled(Level::TRACE_INT))

      { return false; }

      return Level::getTrace()->isGreaterOrEqual(getEffectiveLevel());
      }

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            doormalena Alexander
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: