LOGCXX-208: isTraceEnabled implementation missing